--- a/css/index.css
+++ b/css/index.css
@@ -566,4 +566,96 @@ div .gallery .imga {
           opacity: 0.60;
       }
 
+/*---------------------------------------------------------------------------------------------------------------*/
+
+/* Set a style for the submit button */
+.btnGuardar {
+    background-color: #9a77ab;
+    color: white;
+    padding: 10px 10px;
+    border: none;
+    cursor: pointer;
+    width: 20%;
+    opacity: 0.9;
+
+}
+
+.btnActualizar {
+    background-color: #9a77ab;
+    color: white;
+    padding: 10px 10px;
+    border: none;
+    cursor: pointer;
+    width: 20%;
+    opacity: 0.9;
+  
+}
+
+#crearExcursion{
+  overflow: hidden;
+  position: fixed;
+  top: 10%;
+  left: 0px;
+  width: 100%;
+}
+
+
+#editarExcursion{
+  overflow: hidden;
+  position: fixed;
+  top: 10%;
+  left: 500px;
+  width: 100%;
+}
+
+
+.input-containerAdmin {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    width: 100%;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.icon {
+    padding: 10px;
+    background: #9a77ab;
+    color: white;
+    min-width: 50px;
+    text-align: center;
+}
+
+.input-fieldAdmin {
+    width: 100%;
+    padding: 10px;
+    outline: none;
+}
+
+.input-fieldAdmin:focus {
+    border: 2px solid #8f66a3;
+}
+
+
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    padding: 15px;
+    text-align: left;
+}
+
+#tablaAdminExcursiones tr:nth-child(even) {
+  border-collapse: collapse;
+  background-color: burlywood;
+}
+
+#tablaAdminExcursiones tr:nth-child(odd) {
+   background-color: beige;
+}
+
+#tablaAdminExcursiones th {
+    background-color: black;
+    color: white;
+}
 
